--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-css">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to "/", class: "navbar-brand" do %>
       <%= image_tag "logo.svg", alt: "logo" %>
     <% end %>
 
@@ -16,9 +16,6 @@
           </li>
           <li class="nav-item active">
             <%= link_to "Treatments", "/treatments", class: "nav-link" %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to "Vehicles", "/vehicles", class: "nav-link" %>
           </li>
           <li class="nav-item active">
             <%= link_to "Clients", "/clients", class: "nav-link" %>
