--- a/app/views/treatments/index.html.erb
+++ b/app/views/treatments/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Treatments#index</h1>
-<p>Find me in app/views/treatments/index.html.erb</p>
+<%= link_to "New treatment", new_treatment_path, class:"btn btn-primary mb-3" %>
+
+<h1>Treatments for today, <%= Time.current.strftime("%B %d, %Y") %></h1>
+
+<div id="treatments" class="row">
+  <% @treatments.each do |treatment| %>
+    <div class="col-md-4 mb-3">
+      <%= render treatment, treatment: treatment %>
+    </div>
+  <% end %>
+</div>
+
+<div class="sticky-bottom bg-light py-2">
+  <h3>Total distance driven today: <%= @total_distance %> km</h3>
+</div>
