--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Clients#index</h1>
-<p>Find me in app/views/clients/index.html.erb</p>
+<%= link_to "New client", new_client_path, class:"btn btn-primary mb-3" %>
+
+<h1>All clients</h1>
+
+<div id="clients" class="row">
+  <% @clients.each do |client| %>
+    <div class="col-md-4 mb-3">
+      <%= render client, client: client %>
+    </div>
+  <% end %>
+</div>
