Adds address in regist form + upd user edit form

--- a/app/views/treatments/index.html.erb
+++ b/app/views/treatments/index.html.erb
@@ -11,5 +11,5 @@
 </div>
 
 <div class="sticky-bottom bg-light py-2">
-  <h3>Total distance driven today: <%= @total_distance %> km</h3>
+  <h3>Driven distance today: <%= @total_distance %> km</h3>
 </div>
