--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,21 +4,35 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "name" } %>
+    <%= f.input :last_name,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "last-name" } %>
+    <%= f.input :email,
+                required: true,
+                autofocus: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
+    <%= f.input :address,
+            required: true,
+            autofocus: true,
+            input_html: { autocomplete: "address" } %>
 
     <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
+                hint: "Leave it blank if you don't want to change it",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
+                hint: "We need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
   </div>
@@ -28,8 +42,21 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<br>
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+<%= button_to "Home", root_path, method: :get, class: "btn btn-secondary" %>
 
-<%= link_to "Back", :back %>
+<br>
+
+<div>
+  <h4>Dangerous area</h4>
+  <p>⚠️ This action is not reversible⚠️</p>
+
+  <%= button_to "Cancel my account",
+  registration_path(resource_name),
+  data: { confirm: "Are you sure?",
+  turbo_confirm: "Are you sure?" },
+  method: :delete,
+  class: "btn btn-danger" %>
+
+</div>
