--- a/app/views/treatments/index.html.erb
+++ b/app/views/treatments/index.html.erb
@@ -12,4 +12,5 @@
 
 <div class="sticky-bottom bg-light py-2">
   <h3>Driven distance today: <%= @total_distance %> km</h3>
+  <h3>Driven time today: <%= @total_time %> minutes</h3>
 </div>
