--- a/app/views/treatments/_treatment.html.erb
+++ b/app/views/treatments/_treatment.html.erb
@@ -1,20 +1,28 @@
-<div id="<%= dom_id treatment %>" class="card h-100">
-  <%= link_to treatment, class: "text-decoration-none" do %>
-    <div class="card-body">
-      <h5 class="card-title">
-        <strong>Patient name:</strong>
-        <%= treatment.patient.name %>
-      </h5>
+<div class="card"
+data-treatment-id="<%= treatment.id %>"
+data-controller="distance-calculator time-calculator"
+data-distance-calculator-target="card"
+data-time-calculator-target="card">
 
-      <p class="card-text">
-        <strong>Start time:</strong>
-        <%= treatment.start_time.strftime("%H:%M") %>
-      </p>
+  <div id="<%= dom_id treatment %>" class="card h-100">
+    <%= link_to treatment, class: "text-decoration-none" do %>
+      <div class="card-body">
+        <h5 class="card-title">
+          <strong>Patient name:</strong>
+          <%= treatment.patient.name %>
+        </h5>
 
-      <p class="card-text">
-        <strong>End time:</strong>
-        <%= treatment.end_time.strftime("%H:%M") %>
-      </p>
-    </div>
-  <% end %>
+        <p class="card-text">
+          <strong>Start time:</strong>
+          <%= treatment.start_time.strftime("%H:%M") %>
+        </p>
+
+        <p class="card-text">
+          <strong>End time:</strong>
+          <%= treatment.end_time.strftime("%H:%M") %>
+        </p>
+      </div>
+    <% end %>
+  </div>
+
 </div>
