fixed name calcometer2 > calcometer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calcometer2</title>
+    <title>Calcometer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="mapbox-api-key" content="<%= ENV['MAPBOX_API_KEY'] %>">
     <%= csrf_meta_tags %>
