fixed stimulus controllers and switch data origin patients > treatments

--- a/app/views/treatments/_treatment.html.erb
+++ b/app/views/treatments/_treatment.html.erb
@@ -1,6 +1,6 @@
 <div class="card"
 data-treatment-id="<%= treatment.id %>"
-data-controller="distance-calculator time-calculator"
+data-controller="distance"
 data-distance-calculator-target="card"
 data-time-calculator-target="card">
 
