--- a/app/views/treatments/new.html.erb
+++ b/app/views/treatments/new.html.erb
@@ -1,16 +1,18 @@
-<div class="container" data-controller="distance time">
+<div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <%= simple_form_for(@treatment, html: { class: "form-horizontal" }) do |f| %>
         <%= f.input :user_id, as: :hidden, input_html: { value: current_user.id } %>
 
-        <%= f.association :patient, label: "Select Patient", collection: Patient.all, label_method: :name, value_method: :id, wrapper_html: { class: 'mb-3', data: { "distance-target": "patient", "time-target": "patient" } }, input_html: { "data-action": "change->distance#calculate change->time#calculate" } %>
+        <%= f.association :patient, label: "Select Patient", collection: Patient.all, label_method: :name, value_method: :id %>
 
-        <%= f.input :start_time, label: "Start Time", as: :time, input_html: { value: Time.current.strftime("%H:%M"), min: Time.current.strftime("%H:%M"), class: "form-control" }, wrapper_html: { class: 'mb-3' } %>
+        <%= f.input :start_time, label: "Start Time", as: :time, input_html: { value: Time.current.strftime("%H:%M"), min: Time.current.strftime("%H:%M") } %>
 
-        <%= f.input :end_time, label: "End Time", as: :time, input_html: { value: Time.current.strftime("%H:%M"), class: "form-control" }, wrapper_html: { class: 'mb-3' } %>
+        <%= f.input :end_time, label: "End Time", as: :time, input_html: { value: Time.current.strftime("%H:%M") } %>
 
-        <%= f.button :submit, "Create Treatment", class: "btn btn-primary" %>
+        <div data-controller="distance-calculator" data-action="click->distance-calculator#calculateDistance">
+          <%= f.button :submit, "Create Treatment", class: "btn btn-primary" %>
+        </div>
       <% end %>
     </div>
   </div>
