--- a/app/views/treatments/index.html.erb
+++ b/app/views/treatments/index.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "New treatment", new_treatment_path, class:"btn btn-primary mb-3" %>
 
-<h1>Treatments for today, <%= Time.current.strftime("%B %d, %Y") %></h1>
+<h1>Treatments on <%= Time.current.strftime("%B %d") %></h1>
 
 
 <div id="treatments" class="row">
@@ -12,6 +12,6 @@
 </div>
 
 <div id="total-distance-time" class="sticky-bottom bg-light py-2">
-  <h3>Total driven distance today: <span id="total-distance">0</span> km</h3>
+  <h3>Total driven distance today: <%= @total_distance.round(2) %> km</h3>
   <h3>Total driven time today: <span id="total-time">0</span> minutes</h3>
 </div>
