--- a/app/views/treatments/new.html.erb
+++ b/app/views/treatments/new.html.erb
@@ -10,7 +10,7 @@
 
         <%= f.input :end_time, label: "End Time", as: :time, input_html: { value: Time.current.strftime("%H:%M") } %>
 
-        <div data-controller="distance-calculator" data-action="click->distance-calculator#calculateDistance">
+        <%# <div data-controller="distance-calculator" data-action="click->distance-calculator#calculateDistance"> %>
           <%= f.button :submit, "Create Treatment", class: "btn btn-primary" %>
         </div>
       <% end %>
