MILESTONE add total driven time & refactor treatments index

--- a/app/views/treatments/index.html.erb
+++ b/app/views/treatments/index.html.erb
@@ -12,6 +12,6 @@
 </div>
 
 <div id="total-distance-time" class="sticky-bottom bg-light py-2">
-  <h3>Total driven distance today: <%= @total_distance.round(2) %> km</h3>
-  <h3>Total driven time today: <span id="total-time">0</span> minutes</h3>
+  <h3>Total distance: <%= @total_distance.round(2) %> km</h3>
+  <h3>Total time: <%= @total_time %> minutes</h3>
 </div>
