Cleaning StimulusJS controllers

--- a/app/views/treatments/_treatment.html.erb
+++ b/app/views/treatments/_treatment.html.erb
@@ -1,8 +1,4 @@
-<div class="card"
-data-treatment-id="<%= treatment.id %>"
-data-controller="distance"
-data-distance-calculator-target="card"
-data-time-calculator-target="card">
+<div class="card">
 
   <div id="<%= dom_id treatment %>" class="card h-100">
     <%= link_to treatment, class: "text-decoration-none" do %>
