Aligned buttons in show templates for all models

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,11 +1,21 @@
-<p style="color: green"><%= notice %></p>
+<%= notice %>
 
 <%= render @client %>
 
-<div>
-  <%= link_to "Edit this client", edit_client_path(@client), class:"btn btn-primary" %> |
+<br>
 
+<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+  <%= link_to "Edit this client", edit_client_path(@client), class:"btn btn-primary" %>
   <%= link_to "Back to clients", clients_path, class:"btn btn-secondary" %>
 
-  <%= button_to "Destroy this client", @client, method: :delete, class:"btn btn-danger" %>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      More Options
+    </button>
+    <ul class="dropdown-menu">
+      <li>
+        <%= button_to "Delete this client", @client, method: :delete, class: "dropdown-item"%>
+      </li>
+    </ul>
+  </div>
 </div>
