--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -52,7 +52,7 @@
   <h4>Dangerous area</h4>
   <p>⚠️ This action is not reversible⚠️</p>
 
-  <%= button_to "Cancel my account",
+  <%= button_to "Delete my account",
   registration_path(resource_name),
   data: { confirm: "Are you sure?",
   turbo_confirm: "Are you sure?" },
