--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,11 +1,21 @@
-<p style="color: green"><%= notice %></p>
+<%= notice %>
 
 <%= render @patient %>
 
-<div>
-  <%= link_to "Edit this patient", edit_patient_path(@patient), class:"btn btn-primary" %> |
+<br>
 
-  <%= link_to "Back to patients", patients_path, class:"btn btn-secondary" %>
+<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+  <%= link_to "Edit this patient", edit_patient_path(@patient), class: "btn btn-primary" %>
+  <%= link_to "Back to patients", patients_path, class: "btn btn-secondary" %>
 
-  <%= button_to "Destroy this patient", @patient, method: :delete, class:"btn btn-danger" %>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      More Options
+    </button>
+    <ul class="dropdown-menu">
+      <li>
+        <%= button_to "Delete this patient", @patient, method: :delete, class: "dropdown-item" %>
+      </li>
+    </ul>
+  </div>
 </div>
