--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,6 +21,9 @@
           <li class="nav-item active">
             <%= link_to "Treatments", "/treatments", class: "nav-link" %>
           </li>
+          <li class="nav-item">
+            <%= link_to "Analytics", "/analytics", class: "nav-link" %>
+          </li>
           <li class="nav-item active">
             <%= link_to "Patients", "/patients", class: "nav-link" %>
           </li>
