--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,11 +7,11 @@
     <%= f.input :name,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "name" } %>
+                input_html: { autocomplete: "off" } %>
     <%= f.input :last_name,
                 required: false,
                 autofocus: true,
-                input_html: { autocomplete: "last-name" } %>
+                input_html: { autocomplete: "off" } %>
     <%= f.input :email,
                 required: true,
                 autofocus: true %>
@@ -22,19 +22,19 @@
     <%= f.input :address,
             required: true,
             autofocus: true,
-            input_html: { autocomplete: "address" } %>
+            input_html: { autocomplete: "off" } %>
 
     <%= f.input :password,
                 hint: "Leave it blank if you don't want to change it",
                 required: false,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "off" } %>
     <%= f.input :password_confirmation,
                 required: false,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "off" } %>
     <%= f.input :current_password,
                 hint: "We need your current password to confirm your changes",
                 required: true,
-                input_html: { autocomplete: "current-password" } %>
+                input_html: { autocomplete: "off" } %>
   </div>
 
   <div class="form-actions">
