--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,26 +7,26 @@
     <%= f.input :name,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "name" } %>
+                input_html: { autocomplete: "off" } %>
     <%= f.input :last_name,
                 required: false,
                 autofocus: true,
-                input_html: { autocomplete: "last-name" } %>
+                input_html: { autocomplete: "off" } %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" } %>
+                input_html: { autocomplete: "off" } %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "off" } %>
     <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "off" } %>
     <%= f.input :address,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "address" } %>
+                input_html: { autocomplete: "off" } %>
   </div>
 
   <div class="form-actions">
