--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <%= simple_form_for(@patient) do |f| %>
+      <%= simple_form_for(@patient, local: true, data: { turbo: false }, html: { class: "form-horizontal" }) do |f| %>
         <%= f.error_notification %>
 
         <div class="form-group">
