improve views and 'new' forms

--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -2,12 +2,11 @@
   <%= link_to patient, class: "text-decoration-none" do %>
     <div class="card-body">
       <h5 class="card-title">
-        <strong>Patient name:</strong>
-        <%= patient.name %>
+        <strong><%= patient.name %></strong>
       </h5>
 
       <p class="card-text">
-        <strong>Start time:</strong>
+        <strong>Address</strong>
         <%= patient.address %>
       </p>
 
