--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,19 +1,21 @@
 <% if notice %>
-  <div class="alert alert-info alert-dismissible fade show m-1" role="alert">
+  <div class="alert alert-success alert-dismissible fade show fixed-bottom" role="alert">
     <%= notice %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
     </button>
   </div>
 <% end %>
+
 <% if alert %>
-  <div class="alert alert-warning alert-dismissible fade show m-1" role="alert">
+  <div class="alert alert-warning alert-dismissible fade show fixed-bottom" role="alert">
     <%= alert %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
     </button>
   </div>
 <% end %>
+
 <% if flash[:error] %>
-  <div class="alert alert-danger alert-dismissible fade show m-1" role="alert">
+  <div class="alert alert-danger alert-dismissible fade show fixed-bottom" role="alert">
     <%= flash[:error] %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
     </button>
