refactor indexes for better clarity and consistency

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,6 +1,6 @@
-<%= link_to "New client", new_client_path, class:"btn btn-primary mb-3" %>
+<h1 class="text-center my-4">All clients</h1>
 
-<h1>All clients</h1>
+<%= link_to "New client", new_client_path, class:"btn btn-primary mb-3" %>
 
 <div id="clients" class="row">
   <% @clients.each do |client| %>
@@ -8,4 +8,8 @@
       <%= render client, client: client %>
     </div>
   <% end %>
+</div>
+
+<div class="fixed-bottom bg-light p-4 mb-0">
+  <h3>You have <%= @clients.count %> clients</h3>
 </div>
