--- a/app/views/treatments/index.html.erb
+++ b/app/views/treatments/index.html.erb
@@ -1,6 +1,6 @@
-<%= link_to "New treatment", new_treatment_path, class:"btn btn-primary mb-3" %>
+<h1 class="text-center my-4">Treatments on <%= Time.current.strftime("%B %d") %></h1>
 
-<h1>Treatments on <%= Time.current.strftime("%B %d") %></h1>
+<%= link_to "New treatment", new_treatment_path, class:"btn btn-primary mb-3" %>
 
 <div id="treatments" class="row">
   <% @treatments.sort_by(&:start_time).each do |treatment| %>
@@ -10,8 +10,7 @@
   <% end %>
 </div>
 
-
-<div id="total-distance-time" class="fixed-bottom bg-light py-2 pt-2">
-  <h3>Total distance: <%= @total_distance.round(2) %> km</h3>
-  <h3>Total time: <%= @total_time %> minutes</h3>
+<div id="total-distance-time" class="fixed-bottom bg-light p-4 mb-0">
+  <h3>You drove so far</h3>
+  <h3><strong><%= @total_distance.round(2) %> km & <%= @total_time %> minutes</strong></h3>
 </div>
