improve partials & refactor navbar

--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -2,11 +2,11 @@
   <%= link_to patient, class: "text-decoration-none" do %>
     <div class="card-body">
       <h5 class="card-title">
-        <strong><%= patient.name %></strong>
+        <strong>👤 <%= patient.name %></strong>
       </h5>
 
       <p class="card-text">
-        <strong>Address</strong>
+        <strong>📍</strong>
         <%= patient.address %>
       </p>
 
