--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,16 +1,8 @@
 <div id="<%= dom_id client %>" class="card h-100">
   <%= link_to client, class: "text-decoration-none" do %>
     <div class="card-body">
-      <h5 class="card-title">
-        <strong>Name:</strong>
-        <%= client.name %>
-      </h5>
-
-      <p class="card-text">
-        <strong>Email:</strong>
-        <%= client.email %>
-      </p>
-
+      <h3 class="card-title">🏢 <strong><%= client.name %></strong></h3>
+      <h5 class="card-text">📧 <%= client.email %></h5>
     </div>
   <% end %>
 </div>
