--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -2,20 +2,28 @@
 
 <%= render @patient %>
 
-<br>
+<div class="col-sl-6 p-2">
+  <%= static_map [{latitude: @patient.latitude, longitude: @patient.longitude}], width: 300, height: 300 %>
+  <a href="https://www.google.com/maps/dir/?api=1&destination=<%= @patient.latitude %>,<%= @patient.longitude %>&travelmode=driving" target="_blank">
+    <h3>Drive me to the patient</h3>
+  </a>
+</div>
 
-<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-  <%= link_to "Edit this patient", edit_patient_path(@patient), class: "btn btn-primary" %>
-  <%= link_to "Back to patients", patients_path, class: "btn btn-secondary" %>
+<div>
+  <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+    <%= link_to "Edit this patient", edit_patient_path(@patient), class: "btn btn-primary" %>
+    <%= link_to "Back to patients", patients_path, class: "btn btn-secondary" %>
 
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-      More Options
-    </button>
-    <ul class="dropdown-menu">
-      <li>
-        <%= button_to "Delete this patient", @patient, method: :delete, class: "dropdown-item" %>
-      </li>
-    </ul>
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        More Options
+      </button>
+      <ul class="dropdown-menu">
+        <li>
+          <%= button_to "Delete this patient", @patient, method: :delete, class: "dropdown-item" %>
+        </li>
+      </ul>
+
+    </div>
   </div>
 </div>
