--- a/app/views/treatments/_treatment.html.erb
+++ b/app/views/treatments/_treatment.html.erb
@@ -4,7 +4,13 @@
     <%= link_to treatment, class: "text-decoration-none" do %>
       <div class="card-body">
         <div class="card-title">
-          <h4><strong><%= treatment.patient.name %></strong></h4>
+          <h4><strong><%=
+            unless treatment.patient
+              "Deleted patient"
+            else
+              treatment.patient.name
+            end %>
+            </strong></h4>
         </div>
 
         <div class="card-text">
