--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h3>You are creating a new client</h3>
+    <h3 class="text-center my-4">You are creating a new client</h3>
     <div class="col-md-6 offset-md-3">
       <%= render "form", client: @client %>
     </div>
