Minor enhancements and typos

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -14,5 +14,5 @@
                         placeholder: "prima@email.com" %>
   </div>
 
-  <%= f.submit "Submit", class: 'btn btn-primary' %>
+  <%= f.submit "Validate and save", class: 'btn btn-primary' %>
 <% end %>
