--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -26,6 +26,6 @@
     <%= f.collection_select :client_id, Client.all, :id, :name, {}, { class: "form-control" } %>
   </div>
 
-  <%= f.submit "Submit", class: 'btn btn-primary mt-3' %>
+  <%= f.submit "Validate and save", class: 'btn btn-primary mt-3' %>
 
 <% end %>
