--- a/app/views/treatments/index.html.erb
+++ b/app/views/treatments/index.html.erb
@@ -11,6 +11,6 @@
 </div>
 
 <div id="total-distance-time" class="fixed-bottom bg-light p-4 mb-0">
-  <h3>You drove so far</h3>
+  <h3>Today you drove</h3>
   <h3><strong><%= @total_distance.round(2) %> km & <%= @total_time %> minutes</strong></h3>
 </div>
