--- a/app/views/treatments/new.html.erb
+++ b/app/views/treatments/new.html.erb
@@ -1,20 +1,24 @@
 <div class="container">
   <div class="row">
+  <h3 class="text-center my-4">You are creating a new treatment</h3>
     <div class="col-md-6 offset-md-3">
       <%= simple_form_for(@treatment, local: true, data: { turbo: false }, html: { class: "form-horizontal" }) do |f| %>
 
         <%= f.input :user_id, as: :hidden, input_html: { value: current_user.id } %>
 
-        <%= f.label :patient_id, "Select Patient" %>
-        <%= f.select :patient_id, Patient.all.map { |p| [p.name, p.id] }, { include_blank: true }, class: "form-control" %>
+        <%= f.label :patient_id, "Select patient" %>
+        <%= f.select :patient_id, Patient.all.map { |p| [p.name, p.id] }, { include_blank: true }, class: "form-select" %>
 
-        <%= f.input :start_time, label: "Start Time", as: :time, :minute_step => 15, input_html: { value: Time.current.strftime("%H:%M"), min: Time.current.strftime("%H:%M") } %>
+        <%= f.input :start_time, label: "Start time", as: :time, :minute_step => 15, input_html: { value: Time.current.strftime("%H:%M"), min: Time.current.strftime("%H:%M") }, class: "form-select" %>
 
-        <%= f.input :end_time, label: "End Time", as: :time, :minute_step => 15, input_html: { value: Time.current.strftime("%H:%M") } %>
+        <%= f.input :end_time, label: "End time", as: :time, :minute_step => 15, input_html: { value: Time.current.strftime("%H:%M") }, class: "form-select" %>
 
-        <%= f.button :submit, "Create Treatment", class: "btn btn-primary" %>
+        <%= f.button :submit, "Validate and save", class: "btn btn-primary" %>
 
       <% end %>
+    </div>
+    <div class="col-md-6 offset-md-3 mt-3">
+      <%= link_to "Back to treatments", treatments_path, class: "btn btn-secondary" %>
     </div>
   </div>
 </div>
