homepage restyling for new and existing users

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -10,6 +10,6 @@
   <% end %>
 </div>
 
-<div class="fixed-bottom bg-light p-4 mb-0">
-  <h3>You have <%= @clients.count %> clients</h3>
-</div>
+<footer class="fixed-bottom border-top border-dark footer-css">
+  <h4 class="d-flex justify-content-center p-3">You have <%= @clients.count %> clients</h4>
+</footer>
