--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= link_to "New patient", new_patient_path, class:"btn btn-primary mb-3" %>
 
-<div id="patients" class="row mb-5">
+<div id="patients" class="row">
   <% @patients.each do |patient| %>
     <div class="col-md-4 mb-3">
       <%= render patient, patient: patient %>
@@ -10,6 +10,6 @@
   <% end %>
 </div>
 
-<div class="fixed-bottom bg-light p-4 pt-2 pb-2 mb-0">
-  <h3>You have <%= @patients.count %> patients</h3>
-</div>
+<footer class="fixed-bottom border-top border-dark footer-css">
+  <h4 class="d-flex justify-content-center p-3">You have <%= @patients.count %> patients</h4>
+</footer>
