--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -19,9 +19,11 @@ $danger: $red;
 $warning: $orange;
 
 // Buttons & inputs' radius
-$border-radius: 2px;
-$border-radius-lg: 2px;
-$border-radius-sm: 2px;
+$border-radius: 5px;
+$border-radius-lg: 5px;
+$border-radius-sm: 5px;
 
 // Override other variables below!
 $dropdown-border-color: #0e0000;
+$btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
