--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Forgot your password?</h2>
+<h4>Forgot your password?</h4>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
@@ -11,8 +11,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "Send me reset password instructions", class:"btn btn-primary mb-3" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= button_to "Home", root_path, method: :get, class: "btn btn-secondary" %>
